# PIMLibrary

./: README_gcn  env.source  gcn_1iter_result  gcn_3iter_result  gcn_devicetype_to_pim.sh  gcn_pimtype_to_device.sh  gcn_res.py  gemm_devicetype_to_pim.sh  gemm_pimtype_to_device.sh  modifyRandLib.sh  runTest.sh  sparse_gen.py  variousGemm.sh  variousGemm_res.py  variousPimTypeGemm_res.py
data/: cora_dense_adj.txt  cora_dense_input.txt  cora_dense_layer1_weight.txt  cora_dense_layer2_weight.txt  cora_layer1_var2.txt  cora_layer2_var1.txt  cora_layer2_weight.txt  cora_mini_input.txt  cora_mini_layer1_var1.txt  cora_mini_layer1_var2.txt  cora_mini_layer1_weight.txt  cora_mini_layer2_var1.txt  cora_mini_output.txt
docker/: Dockerfile.ROCm-4.0.SAIT.GPU  docker-pim.sh
examples/integration_test/include/: test_eltwise.h
runtime/include/: PimRuntime.h  pim_runtime_api.h
runtime/include/executor/: IPimExecutor.h
runtime/include/utility/: pim_profile.h  pim_util.h
runtime/source/: PimRuntime.cpp  pim_runtime_api.cpp
tools/pimbench/: CMakeLists.txt
tools/pimbench/gcn/common/: gcn_parser.cpp  gcn_parser.h
tools/pimbench/gcn/data/: cora_layer1_var1.txt  cora_output.txt
tools/pimbench/gcn/hip/: hip_gcn.cpp  hip_gcn.h  hip_kernel.cpp  hip_kernel.h  hip_module.cpp  hip_module.h  hip_variable.cpp  hip_variable.h
tools/pimbench/gcn/seq/: gcn.cpp  module.cpp  variable.cpp  variable.h
tools/pimbench/include/: common_perf.h  gcn_perf.h  gemm_perf.h  parser.h
tools/pimbench/source/: common_perf.cpp  gcn_perf.cpp  gemm_perf.cpp  parser.cpp  pimperf_main.cpp
(+16 files in other folders)
